add codeclimate badge to README.md and .eslint.yml

--- a/package.json
+++ b/package.json
@@ -18,5 +18,13 @@
   "homepage": "https://github.com/julimalinna/frontend-project-lvl2#readme",
   "dependencies": {
     "commander": "^7.0.0"
+  },
+  "bin": {
+    "gendiff": "bin/gendiff.js"
+  },
+  "devDependencies": {
+    "eslint": "^7.19.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
   }
 }
