--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,3 +1,5 @@
+---
+
 env:
   es2021: true
   node: true
@@ -6,7 +8,6 @@ extends:
 parserOptions:
   ecmaVersion: 12
   sourceType: module
-rules: {
+rules:
   no-console: 0
   import/extensions: 0
-}
