--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,5 +1,3 @@
----
-
 env:
   es2021: true
   node: true
@@ -8,6 +6,12 @@ extends:
 parserOptions:
   ecmaVersion: 12
   sourceType: module
-rules:
-  no-console: 0
-  import/extensions: 0
+overrides: [
+  {
+    files: ["*.js"],
+    rules: {
+      import/extensions: off,
+      no-console: off
+    }
+  }
+]
