--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
+  "type": "module",
   "description": "Node-js package with which you could compare two configuration files and see a difference.",
   "main": "index.js",
   "scripts": {
@@ -17,7 +18,8 @@
   },
   "homepage": "https://github.com/julimalinna/frontend-project-lvl2#readme",
   "dependencies": {
-    "commander": "^7.0.0"
+    "commander": "^7.0.0",
+    "lodash": "^4.17.20"
   },
   "bin": {
     "gendiff": "bin/gendiff.js"
