add __tests__, __fixtures__, change package.json and Makefile

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,18 +1,21 @@
+plugins:
+  - jest
+
 env:
   es2021: true
   node: true
+
 extends:
-  - airbnb-base
+  - 'airbnb-base'
+  - 'plugin:jest/recommended'
+
 parserOptions:
   ecmaVersion: 12
   sourceType: module
-rules: {}
-overrides: [
-  {
-    files: ["*.js"],
-    rules: {
-      import/extensions: off,
-      no-console: off
-    }
-  }
-]
+
+rules:
+  no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
+  import/extensions: off
+  no-console: off
+
+overrides: [ { files: ["*.js"] } ]
