--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
-  "type": "module",
   "description": "Node-js package with which you could compare two configuration files and see a difference.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest"
   },
   "repository": {
     "type": "git",
@@ -16,6 +15,11 @@
   "bugs": {
     "url": "https://github.com/julimalinna/frontend-project-lvl2/issues"
   },
+  "type": "module",
+  "jest": {
+    "testEnvironment": "node",
+    "transform": {}
+  },
   "homepage": "https://github.com/julimalinna/frontend-project-lvl2#readme",
   "dependencies": {
     "commander": "^7.0.0",
@@ -25,8 +29,12 @@
     "gendiff": "bin/gendiff.js"
   },
   "devDependencies": {
+    "@jest/globals": "^26.6.2",
     "eslint": "^7.19.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1"
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
+    "jest": "^26.6.3",
+    "jest-cli": "^26.6.3"
   }
 }
