--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -36,3 +36,9 @@ jobs:
         # Run Linter
         run: |
           make lint
+      - name: Test & publish code coverage
+        uses: paambaati/codeclimate-action@v2.7.5
+        env:
+            CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        with:
+          coverageCommand: make test-coverage
