add parsers.js, update index.js, gendiff.js, gendiff.test.js

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/julimalinna/frontend-project-lvl2#readme",
   "dependencies": {
     "commander": "^7.0.0",
+    "js-yaml": "^3.14.1",
     "lodash": "^4.17.20"
   },
   "bin": {
